[package]
name = "udelay"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-hal = { path = "../rp-hal/rp2040-hal" }
rp2040-hal-macros = { version = "0.1.0", path = "../rp-hal/rp2040-hal-macros" }
rp2040-pac = "0.4.0"
pio = "0.2.0"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
pio-proc = "0.2.0"
